--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "mocha": "^9.1.4"
   },
   "private": true
 }
