--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "mocha --exit"
   },
   "engines": {
     "node": "16"
@@ -17,8 +18,10 @@
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "firebase-functions-test": "^0.2.0",
-    "mocha": "^9.1.4"
+    "mocha": "^9.1.4",
+    "supertest": "^6.2.2"
   },
   "private": true
 }
