--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha --exit"
+    "test": "mocha test/router/public/publichub_spec"
   },
   "engines": {
     "node": "16"
