--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Team-Helper/ComgongBOT#readme",
   "dependencies": {
-    "express": "^4.17.2",
-    "firebase": "^9.6.4"
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
