--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
