--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^15.0.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
