--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha test/crawling/free_board_spec.js -t 5000"
+    "test": "mocha test/crawling/faculty_introduction_spec -t 5000"
   },
   "engines": {
     "node": "16"
