--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.2",
     "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^15.0.0",
+    "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "puppeteer": "^13.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
