--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha test/crawling/education_spec -t 5000"
+    "test": "mocha test/crawling/engineering_spec -t 5000"
   },
   "engines": {
     "node": "16"
@@ -20,13 +20,14 @@
     "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
+    "nocha": "^1.1.1",
     "puppeteer": "^13.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "chai": "^4.3.4",
     "firebase-functions-test": "^0.2.0",
     "mocha": "^9.1.4",
+    "nodemon": "^2.0.15",
     "supertest": "^6.2.2"
   },
   "private": true
