--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
                 "max": 3
             }
         ],
-        "max-nested-callbacks": ["error", 3]
+        "max-nested-callbacks": [
+            "error", 3
+        ],
+        "no-plusplus": "error"
     }
 }
