--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,14 +15,17 @@
         "default-case": "error", // switch/case 문에 default 없으면 에러
         "default-case-last": "error", // default 문이 마지막으로 없으면 에러
         "id-length": "error", // 변수 작명이 2글자 미만이면 에러
-        "max-depth": [ // 로직 깊이를 3개 이상으로 하면 에러
+        "max-depth": [
+            // 로직 깊이를 3개 이상으로 하면 에러
             "error", {
                 "max": 3
             }
         ],
-        "max-nested-callbacks": [ // 콜백 함수 깊이를 3개 이상으로 하면 에러
-            "error", 3
+        "max-nested-callbacks": [
+            // 콜백 함수 깊이를 3개 이상으로 하면 에러
+            "error",
+            3
         ],
-        "no-plusplus": "error" // 전위 후위 연산하면 에러
+        "spaced-comment": ["error", "never"] // 주석처리 시작부분에 공백을 넣으면 에러
     }
 }
