--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha test/router/personal/personal_service_spec -t 10000"
+    "test": "mocha test/router/personal/personal_service_spec -t 10000",
+    "lint": "eslint . --fix"
   },
   "engines": {
     "node": "16"
