--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "comgongbot",
   "version": "1.0.0",
   "description": "성결대학교 졸업작품 컴공과 챗봇 프로젝트",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon .",
+    "start": "firebase emulators:start",
     "lint": "eslint . --fix"
   },
   "repository": {
