--- a/functions/package.json
+++ b/functions/package.json
@@ -1,33 +1,30 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "test": "mocha test/router/personal/personal_service_spec -t 10000",
-    "config": "firebase functions:config:get > .runtimeconfig.json",
-    "config_win": "firebase functions:config:get | ac .runtimeconfig.json"
-  },
-  "engines": {
-    "node": "16"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "axios": "^0.25.0",
-    "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^15.0.0",
-    "express": "^4.17.2",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
-    "puppeteer": "^13.2.0"
-  },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "firebase-functions-test": "^0.2.0",
-    "mocha": "^9.1.4",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.2.2"
-  },
-  "private": true
+    "name": "functions",
+    "description": "Cloud Functions for Firebase",
+    "scripts": {
+        "logs": "firebase functions:log",
+        "config": "firebase functions:config:get > .runtimeconfig.json",
+        "test": "mocha test/router/setting/input/email_auth_spec -t 10000"
+    },
+    "engines": {
+        "node": "16"
+    },
+    "main": "index.js",
+    "dependencies": {
+        "axios": "^0.25.0",
+        "cheerio": "^1.0.0-rc.10",
+        "dotenv": "^15.0.0",
+        "express": "^4.17.2",
+        "firebase-admin": "^9.8.0",
+        "firebase-functions": "^3.14.1",
+        "puppeteer": "^13.2.0"
+    },
+    "devDependencies": {
+        "chai": "^4.3.4",
+        "firebase-functions-test": "^0.2.0",
+        "mocha": "^9.1.4",
+        "nodemon": "^2.0.15",
+        "supertest": "^6.2.2"
+    },
+    "private": true
 }
