--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "logs": "firebase functions:log",
         "config": "firebase functions:config:get > .runtimeconfig.json",
-        "test": "mocha test/check_parameter_spec -t 10000"
+        "test": "mocha test/check-sid_spec -t 10000"
     },
     "engines": {
         "node": "16"
