--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "express": "^4.17.2"
     },
     "devDependencies": {
-        "eslint": "^8.13.0",
-        "nodemon": "^2.0.15"
+        "eslint": "^8.13.0"
     }
 }
