--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
         "test_crawling": "mocha test/crawling/*.js -t 10000",
         "test_createProfile": "mocha test/router/setting/input/profile_spec -t 10000",
         "test_createCredit": "mocha test/router/setting/input/credit_spec -t 10000",
-        "test": "mocha test/check-number_spec -t 10000"
+        "test": "mocha test/router/service-officeInfo_spec -t 10000"
     },
     "engines": {
         "node": "16"
