--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,20 @@
 {
     "emulators": {
         "auth": {
-            "port": 9099
+            "port": 9099,
+            "host": "0.0.0.0"
         },
         "functions": {
-            "port": 5000
+            "port": 5000,
+            "host": "0.0.0.0"
         },
         "firestore": {
-            "port": 8080
+            "port": 8080,
+            "host": "0.0.0.0"
         },
         "database": {
-            "port": 9000
+            "port": 9000,
+            "host": "0.0.0.0"
         },
         "ui": {
             "enabled": true
