--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,8 @@
             "host": "0.0.0.0"
         },
         "ui": {
-            "enabled": true
+            "enabled": true,
+            "host": "0.0.0.0"
         }
     }
 }
