--- a/functions/package.json
+++ b/functions/package.json
@@ -3,11 +3,12 @@
     "description": "Cloud Functions for Firebase",
     "scripts": {
         "logs": "firebase functions:log",
+        "start": "firebase emulators:start",
         "config": "firebase functions:config:get > .runtimeconfig.json",
         "test_crawling": "mocha test/crawling/*.js -t 10000",
-        "test_createProfile": "mocha test/router/setting/input/profile_spec -t 10000",
-        "test_createCredit": "mocha test/router/setting/input/credit_spec -t 10000",
-        "test": "mocha test/check-number_spec -t 10000"
+        "test_profile": "mocha test/router/setting/input/profile_spec -t 10000 && mocha test/router/setting/input/credit_spec -t 10000",
+        "test": "mocha test/check-number_spec -t 10000",
+        "lint": "eslint . --fix"
     },
     "engines": {
         "node": "16"
@@ -24,6 +25,7 @@
     },
     "devDependencies": {
         "chai": "^4.3.4",
+        "eslint": "^8.20.0",
         "firebase-functions-test": "^0.2.0",
         "mocha": "^9.1.4",
         "supertest": "^6.2.2"
