--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,6 @@ services:
       - 8080:8080
       - 9000:9000
       - 9099:9099
+    environment:
+      - FIREBASE_PROJECT=${project}
+      - FIREBASE_TOKEN=${token}
