--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
     environment:
       - FIREBASE_PROJECT=${project}
       - FIREBASE_TOKEN=${token}
+      - CHOKIDAR_USEPOLLING=true
