--- a/firebase.json
+++ b/firebase.json
@@ -1,24 +1,19 @@
 {
     "emulators": {
         "auth": {
-            "port": 9099,
-            "host": "0.0.0.0"
+            "port": 9099
         },
         "functions": {
-            "port": 5000,
-            "host": "0.0.0.0"
+            "port": 5000
         },
         "firestore": {
-            "port": 8080,
-            "host": "0.0.0.0"
+            "port": 8080
         },
         "database": {
-            "port": 9000,
-            "host": "0.0.0.0"
+            "port": 9000
         },
         "ui": {
-            "enabled": true,
-            "host": "0.0.0.0"
+            "enabled": true
         }
     }
 }
